objects/Contact.object
<CustomObject>
    <fields>
        <fullName>ActiveLiveAgentUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ActiveLiveAgentUser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activity_Indicator__c</fullName>
        <formula>IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_340)) + &apos;servlet/servlet.FileDownload?file=&apos;&amp; IF  (Total_of_Activities__c &gt; 0, &apos;015Hr000003iK9k&apos;, &apos;015Hr000003iK9l&apos;),&apos;&apos;,22,22) &amp;&quot;&quot;&amp;
IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_340)) + &apos;servlet/servlet.FileDownload?file=&apos;&amp; IF  (Total_of_Activities__c &gt; 3, &apos;015Hr000003iK9k&apos;, &apos;015Hr000003iK9l&apos;),&apos;&apos;,22,22) &amp;&quot;&quot;&amp;
IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_340)) + &apos;servlet/servlet.FileDownload?file=&apos;&amp; IF  (Total_of_Activities__c &gt; 6, &apos;015Hr000003iK9k&apos;, &apos;015Hr000003iK9l&apos;),&apos;&apos;,22,22) &amp;&quot;&quot;&amp; 
IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_340)) + &apos;servlet/servlet.FileDownload?file=&apos;&amp; IF  (Total_of_Activities__c &gt; 9, &apos;015Hr000003iK9k&apos;, &apos;015Hr000003iK9l&apos;),&apos;&apos;,22,22) &amp;&quot;&quot;&amp;
IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_340)) + &apos;servlet/servlet.FileDownload?file=&apos;&amp; IF  (Total_of_Activities__c &gt; 12, &apos;015Hr000003iK9k&apos;, &apos;015Hr000003iK9l&apos;),&apos;&apos;,22,22)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Indicator_partner__c</fullName>
        <formula>IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_340)) + &apos;servlet/servlet.FileDownload?file=&apos;&amp; IF (Total_of_Activities__c &gt; 0, &apos;015Hr000003iK9y&apos;, &apos;015Hr000003iK9z&apos;),&apos;&apos;,22,22) &amp;&quot;&quot;&amp; 
IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_340)) +&apos;servlet/servlet.FileDownload?file=&apos;&amp; IF (Total_of_Activities__c &gt; 3, &apos;015Hr000003iK9y&apos;, &apos;015Hr000003iK9z&apos;),&apos;&apos;,22,22) &amp;&quot;&quot;&amp; 
IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_340)) +&apos;servlet/servlet.FileDownload?file=&apos;&amp; IF (Total_of_Activities__c &gt; 6, &apos;015Hr000003iK9y&apos;, &apos;015Hr000003iK9z&apos;),&apos;&apos;,22,22) &amp;&quot;&quot;&amp; 
IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_340)) +&apos;servlet/servlet.FileDownload?file=&apos;&amp; IF (Total_of_Activities__c &gt; 9, &apos;015Hr000003iK9y&apos;, &apos;015Hr000003iK9z&apos;),&apos;&apos;,22,22) &amp;&quot;&quot;&amp; 
IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_340)) +&apos;servlet/servlet.FileDownload?file=&apos;&amp; IF (Total_of_Activities__c &gt; 12, &apos;015Hr000003iK9y&apos;, &apos;015Hr000003iK9z&apos;),&apos;&apos;,22,22)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attritted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attritted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Location__c</fullName>
        <formula>IMAGE(

&quot;https://maps.googleapis.com/maps/api/staticmap?center=&quot; +  MailingStreet + &quot;,&quot;  + MailingCity + &quot;,&quot; +  MailingState + &quot;&amp;zoom=13&amp;size=650x250&amp;markers=color:red|&quot; +  MailingStreet + &quot;,&quot;  + MailingCity + &quot;,&quot; +  MailingState + &quot;&amp;sensor=false&quot;





, &quot;no map available&quot;, 250, 650)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Age__c</fullName>
        <formula>(TODAY()- Birthdate)/365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cust360_CSAT__c</fullName>
        <label>Cust360 CSAT</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cust360_ChurnRisk__c</fullName>
        <label>Risk of Churn</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cust360_Contact_Picture_URL__c</fullName>
        <label>Cust360 Contact Picture URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cust360_Id__c</fullName>
        <label>Cust360 Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cust360_Metric1__c</fullName>
        <label>Cust360 Metric 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cust360_Metric2__c</fullName>
        <label>Cust360 Metric 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Tenure__c</fullName>
        <label>Customer Tenure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Activity__c</fullName>
        <formula>IF(ISNULL(LastActivityDate)=false, TODAY() - LastActivityDate, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM__DB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM__Old_Title__c</fullName>
        <label>Old Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalOracleId__c</fullName>
        <label>ExternalOracleId</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Accounts__c</fullName>
        <label>External Accounts</label>
        <summaryForeignKey>External_Account__c.Customer__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is used to consistently import data to a version of the SDO and translate data into other languages.</inlineHelpText>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FB_Id_for_Identity__c</fullName>
        <description>This field is used for the FB auth provider demo.</description>
        <label>FB Id for Identity</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facebook_Persona_ID__c</fullName>
        <label>Facebook Persona ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facebook_Picture__c</fullName>
        <label>Facebook Picture</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Facebook_Profile_Picture__c</fullName>
        <formula>IMAGE( Facebook_Picture__c,&apos;&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facebook Profile Picture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Homeowner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Homeowner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Income_Range__c</fullName>
        <label>Income Range</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>$25,000 to $29,999</fullName>
                </value>
                <value>
                    <fullName>$30,000 to $34,999</fullName>
                </value>
                <value>
                    <fullName>$35,000 to $39,999</fullName>
                </value>
                <value>
                    <fullName>$40,000 to $44,999</fullName>
                </value>
                <value>
                    <fullName>$45,000 to $49,999</fullName>
                </value>
                <value>
                    <fullName>$50,000 to $59,999</fullName>
                </value>
                <value>
                    <fullName>$60,000 to $74,999</fullName>
                </value>
                <value>
                    <fullName>$75,000 to $99,999</fullName>
                </value>
                <value>
                    <fullName>$100,000 to $124,999</fullName>
                </value>
                <value>
                    <fullName>$125,000 to $149,999</fullName>
                </value>
                <value>
                    <fullName>$150,000 to $199,999</fullName>
                </value>
                <value>
                    <fullName>$200,000 or more</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Klout_Score__c</fullName>
        <defaultValue>76</defaultValue>
        <label>Klout Score</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lifetime_Value__c</fullName>
        <description>Used by Einstein Prediction Builder</description>
        <label>Lifetime Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MFG_ALL_Certification_Level__c</fullName>
        <description>Partner Contact certification level, used on the Partner Contact layout.</description>
        <label>Certification Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Associate</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>Expert</fullName>
                </value>
                <value>
                    <fullName>Architect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MFG_ALL_Onboarding__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determines if contact is on onboarding path in communities.</description>
        <label>Onboarding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MFG_Discrete_Partners_Delegated_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delegated Administrator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MFG_Discrete_Partners_Initial_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Initial Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Never married</fullName>
                </value>
                <value>
                    <fullName>Married</fullName>
                </value>
                <value>
                    <fullName>Separated</fullName>
                </value>
                <value>
                    <fullName>Widowed</fullName>
                </value>
                <value>
                    <fullName>Divorced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Member_Since__c</fullName>
        <label>Member Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Money_Outflows_Last_30_Days__c</fullName>
        <label>Money Outflows Last 30 Days</label>
        <summarizedField>Money_Transfer__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Money_Transfer__c.To_Account__c</field>
            <operation>contains</operation>
            <value>EXTERNAL</value>
        </summaryFilterItems>
        <summaryForeignKey>Money_Transfer__c.Customer__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Month_of_Birth__c</fullName>
        <description>Used by the Identity and Verification (ID&amp;V) flow.</description>
        <inlineHelpText>Used by the Identity and Verification (ID&amp;V) flow.</inlineHelpText>
        <label>Month of Birth</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Months_of_Membership__c</fullName>
        <formula>(TODAY()-Member_Since__c)/30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Months of Membership</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NBA_to_Display__c</fullName>
        <label>NBA to Display</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Friends__c</fullName>
        <label>Number of Friends</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <label>Occupation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Management</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Sales/Office</fullName>
                </value>
                <value>
                    <fullName>Farming/Fishing</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Production/Transport</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Open_Address_in_Google_Maps__c</fullName>
        <formula>HYPERLINK(&quot;http://maps.google.com?q=&quot; &amp;  MailingStreet  &amp; &quot;%20&quot; &amp;  MailingCity  &amp; &quot;%20&quot; &amp;  MailingState  &amp; &quot;%20&quot; &amp;  MailingPostalCode ,IMAGE(&quot;/servlet/servlet.FileDownload?file=015Hr000003iK9m&quot;, &quot;Map Address in Google&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Address in Google Maps</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Messaging_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Messaging User</label>
        <referenceTo>MessagingEndUser</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Projected_ltv__c</fullName>
        <description>Used by Einstein Prediction Builder</description>
        <label>Projected Lifetime Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ptnr_Onbd_Fmwk__Onboarding_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Onboarding Template</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Ptnr_Onbd_Fmwk__Onboarding__c.Ptnr_Onbd_Fmwk__Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Ptnr_Onbd_Fmwk__Onboarding__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ptnr_Onbd_Fmwk__Onboarding_Start_Date__c</fullName>
        <inlineHelpText>This determines when the contact&apos;s onboarding journey needs to begin.When left blank, start date is taken to be the date when the onboarding plan is attached to the contact. It drives calculation of step duration.</inlineHelpText>
        <label>Onboarding Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ptnr_Onbd_Fmwk__Onboarding_Status__c</fullName>
        <inlineHelpText>Holds the current status of the onboarding plan for the contact. Key field to drive business process based on journey status. Use it to trigger notifications, posts, requesting of funds etc.</inlineHelpText>
        <label>Onboarding Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ptnr_Onbd_Fmwk__Role_Function__c</fullName>
        <defaultValue>&quot;All&quot;</defaultValue>
        <description>When defining a partner contact, use these values to broadly identify the contact&apos;s function. Field used to generate onboarding tasks apt for role if tasks are defined to map to functions</description>
        <inlineHelpText>When defining a partner contact, use these values to broadly identify the contact&apos;s function. Field used to generate onboarding tasks apt for role if tasks are defined to map to functions</inlineHelpText>
        <label>Role Function</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ptnr_Onbd_Fmwk__Partner_Persona</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSP_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SSP User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Playbook_Type__c</fullName>
        <label>Sales Playbook Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Playbook 1</fullName>
                </value>
                <value>
                    <fullName>Sales Playbook 2</fullName>
                </value>
                <value>
                    <fullName>Sales Playbook 3</fullName>
                </value>
                <value>
                    <fullName>Sales Playbook 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Playbook__c</fullName>
        <inlineHelpText>Quip sales playbook</inlineHelpText>
        <label>Sales Playbook</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SlickSidebar_AccountAddress__c</fullName>
        <formula>if(LEN(Account.BillingStreet)&gt;0, Account.BillingStreet&amp; &quot; &quot; , &quot;&quot; ) &amp; BR() &amp;
if(LEN(Account.BillingCity)&gt;0, Account.BillingCity&amp; &quot;, &quot; , &quot;&quot; )&amp;
if(LEN(Account.BillingState)&gt;0, Account.BillingState&amp; &quot; &quot; , &quot;&quot; )&amp;
if(LEN(Account.BillingPostalCode)&gt;0, Account.BillingPostalCode,&quot;&quot;) &amp; BR() &amp;
If(LEN( Account.BillingCountry) &gt;0, Account.BillingCountry,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Assets_Under_Management__c</fullName>
        <label>Total Assets Under Management</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_of_Activities__c</fullName>
        <description>Used as part of Relationship_Indicator__c formula field.</description>
        <inlineHelpText>for Activity Indicator field. &lt;5 = 1 Star, &lt;10 = 3 Stars, &gt;10 = 5 Stars</inlineHelpText>
        <label>Total # of Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Twitter_Persona_ID__c</fullName>
        <label>Twitter Persona ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URLsrc__c</fullName>
        <description>This is used by email templates to determine the instance that the Company Logo image is hosted on.  It&apos;s required so that the image will render correctly when the email is received by a customer.  The value of this field is the same for every Contact.</description>
        <formula>LEFT ($Api.Enterprise_Server_URL_350, 
FIND(&quot;/&quot;,$Api.Enterprise_Server_URL_350, 
FIND(&quot;.&quot;,$Api.Enterprise_Server_URL_350))-1 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URLsrc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_of_Birth__c</fullName>
        <description>Used by the Identity and Verification (ID&amp;V) flow.</description>
        <inlineHelpText>Used by the Identity and Verification (ID&amp;V) flow.</inlineHelpText>
        <label>Year of Birth</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2009</fullName>
                </value>
                <value>
                    <fullName>2008</fullName>
                </value>
                <value>
                    <fullName>2007</fullName>
                </value>
                <value>
                    <fullName>2006</fullName>
                </value>
                <value>
                    <fullName>2005</fullName>
                </value>
                <value>
                    <fullName>2004</fullName>
                </value>
                <value>
                    <fullName>2003</fullName>
                </value>
                <value>
                    <fullName>2002</fullName>
                </value>
                <value>
                    <fullName>2001</fullName>
                </value>
                <value>
                    <fullName>2000</fullName>
                </value>
                <value>
                    <fullName>1999</fullName>
                </value>
                <value>
                    <fullName>1998</fullName>
                </value>
                <value>
                    <fullName>1997</fullName>
                </value>
                <value>
                    <fullName>1996</fullName>
                </value>
                <value>
                    <fullName>1995</fullName>
                </value>
                <value>
                    <fullName>1994</fullName>
                </value>
                <value>
                    <fullName>1993</fullName>
                </value>
                <value>
                    <fullName>1992</fullName>
                </value>
                <value>
                    <fullName>1991</fullName>
                </value>
                <value>
                    <fullName>1990</fullName>
                </value>
                <value>
                    <fullName>1989</fullName>
                </value>
                <value>
                    <fullName>1988</fullName>
                </value>
                <value>
                    <fullName>1987</fullName>
                </value>
                <value>
                    <fullName>1986</fullName>
                </value>
                <value>
                    <fullName>1985</fullName>
                </value>
                <value>
                    <fullName>1984</fullName>
                </value>
                <value>
                    <fullName>1983</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>analyticsdemo_batch_id__c</fullName>
        <label>analyticsdemo_batch_id__c</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__CompanyName__c</fullName>
        <defaultValue>$User.CompanyName</defaultValue>
        <label>CompanyName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__CompanyType__c</fullName>
        <label>CompanyType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Type1</fullName>
                </value>
                <value>
                    <fullName>Type2</fullName>
                </value>
                <value>
                    <fullName>Type3</fullName>
                </value>
                <value>
                    <fullName>Type4</fullName>
                </value>
                <value>
                    <fullName>Type5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__DataId__c</fullName>
        <description>B2B Commerce internal use only except when used with ccApiTestData.</description>
        <externalId>true</externalId>
        <inlineHelpText>B2B Commerce internal use only except when used with ccApiTestData.</inlineHelpText>
        <label>DataId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__IsPortalUser__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Contact a Portal User</description>
        <inlineHelpText>True if contact is a portal user, False otherwise</inlineHelpText>
        <label>Portal User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__SelfRegistered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean determining if the user is a portal user self registered through the site.</description>
        <label>Self Registered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ckz_Budget_Administrator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Administrator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ckz_Budget_Can_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Can Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ckz_Budget_Limit__c</fullName>
        <inlineHelpText>Leave blank or set to zero to reflect no budget limit.</inlineHelpText>
        <label>Budget Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ckz_Budget_Requires_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this field to always require approval, regardless of the budget amount.</inlineHelpText>
        <label>Budget Requires Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__HasOptedOutOfMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Mobile_Country_Code__c</fullName>
        <label>Mobile Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                    <label>US</label>
                </value>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>partdir_mp__Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>